<resources>

    <string name="app_name">Velcro</string>

    <!-- Login screen -->
    <string name="subdomain">Subdomain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="failed_login">Invalid username/password</string>
    <string name="help">help</string>
    <string name="subdomain_explanation">To find out your school\'s subdomain, check
        what comes before <b>schooloop.com</b> in the url of the login page.
        \
        \nExamples:<font face="monospace">
        \n<u>ahs-fusd-ca</u>
        \n<u>jbhs-vcusd-ca</u></font>
    </string>
    <string name="got_it">Got it</string>

    <!-- Bottom navigation menu -->
    <string name="courses">Courses</string>
    <string name="assignments">Assignments</string>
    <string name="loopmail">Loopmail</string>
    <string name="news">News</string>
    <string name="locker">Locker</string>

    <!-- Logout dialog -->
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <!-- Course -->
    <string name="division_line">/</string>
    <string name="percentage_sign">%</string>
    <string name="grade_last_updated">Last updated: %s</string>
    <string name="refresh">Refresh</string>
    <string name="add_assignment">Add an assignment</string>

        <!-- Assignment Edit Dialog -->
        <string name="category">Category</string>
        <string name="score">Score</string>
        <string name="apply">Apply</string>

        <!-- Assignment Add Dialog -->
        <string name="name">Name</string>
        <string name="new_assignment">New Assignment</string>

        <!-- Assignment Remove Dialog -->
        <string name="assignment_remove_message">Are you sure you want to remove this assignment?</string>

    <!-- Loopmail -->
    <string name="loopmail_message_sender">From: %s</string>
    <string name="loopmail_message_recipient">To: %s</string>
    <string name="load_more">Load More</string>

        <!-- Mailboxes -->
        <string name="inbox">Inbox</string>
        <string name="sent">Sent</string>

    <!-- Upcoming -->
    <string name="pts">pts.</string>
    <string name="due">Due: %s</string>
    <string name="info">%s | %s</string>

    <!-- Locker -->
    <string name="sorry">Sorry!</string>
    <string name="explanation">Locker support is coming, but there are only so many hours in a day.
        At the end of the day, I\'m still a busy high school student.
        The project is open source under the GPLv2, so
        if you know any Java, found a bug, or simply have a suggestion for a new feature, let me know
        on <a href="https://github.com/caseyavila/velcro">GitHub</a>.
        I encourage you to contribute; pull requests are open.\
        \
        - Casey Avila
    </string>

</resources>
