<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_courses"
            android:title="@string/courses"
            android:icon="@drawable/ic_book">
    </item>

    <item
            android:id="@+id/navigation_assignments"
            android:title="@string/assignments"
            android:icon="@drawable/ic_assignment">
    </item>


    <item
            android:id="@+id/navigation_loopmail"
            android:title="@string/loopmail"
            android:icon="@drawable/ic_email">
    </item>

    <item
            android:id="@+id/navigation_news"
            android:title="@string/news"
            android:icon="@drawable/ic_news">
    </item>

    <item
            android:id="@+id/navigation_locker"
            android:title="@string/locker"
            android:icon="@drawable/ic_dns">
    </item>

</menu>