<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/category">

    </com.google.android.material.textview.MaterialTextView>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintBottom_toTopOf="@id/score"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp">

    </Spinner>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintBottom_toTopOf="@id/score_earned"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/score">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/score_earned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score"
            app:layout_constraintEnd_toStartOf="@id/score_division_line"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/score_division_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_line"
            app:layout_constraintStart_toEndOf="@id/score_earned"
            app:layout_constraintTop_toTopOf="@id/score_earned"
            app:layout_constraintBottom_toBottomOf="@id/score_earned"
            app:layout_constraintEnd_toStartOf="@id/score_possible"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/manrope_medium">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/score_possible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintStart_toEndOf="@id/score_division_line"
            app:layout_constraintTop_toTopOf="@id/score_division_line"
            app:layout_constraintBottom_toBottomOf="@id/score_division_line"
            android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>